docs: Update for extensionless binaries and remove all emojis
- Update all documentation to reflect removal of .bin extension
  - guest/hello.bin -> guest/hello
  - os-1k/kernel.bin -> os-1k/kernel
  - Updated commands, examples, and file listings
- Remove all emojis from documentation per project guidelines
- Update build verification commands to match new binary names

Reflects changes from commit a40a33c (multi-vCPU output fix)

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -24,20 +24,20 @@ make all
 **빌드 확인**:
 
 ```bash
-ls -lh kvm-vmm guest/*.bin os-1k/*.bin
+ls -lh kvm-vmm guest/* os-1k/kernel
 ```
 
 **예상 결과**:
 ```
 -rwxr-xr-x. 1 seolcu seolcu 25K 11월 23일  HH:MM kvm-vmm
--rwxr-xr-x. 1 seolcu seolcu 18  11월 23일  HH:MM guest/counter.bin
--rwxr-xr-x. 1 seolcu seolcu 82  11월 23일  HH:MM guest/fibonacci.bin
--rwxr-xr-x. 1 seolcu seolcu 79  11월 23일  HH:MM guest/hctest.bin
--rwxr-xr-x. 1 seolcu seolcu 33  11월 23일  HH:MM guest/hello.bin
--rwxr-xr-x. 1 seolcu seolcu 1   11월 23일  HH:MM guest/minimal.bin
--rwxr-xr-x. 1 seolcu seolcu 142 11월 23일  HH:MM guest/multiplication.bin
--rwxr-xr-x. 1 seolcu seolcu 51  11월 23일  HH:MM guest/pmode_test.bin
--rwxr-xr-x. 1 seolcu seolcu 12K 11월 23일  HH:MM os-1k/kernel.bin
+-rwxr-xr-x. 1 seolcu seolcu 18  11월 23일  HH:MM guest/counter
+-rwxr-xr-x. 1 seolcu seolcu 82  11월 23일  HH:MM guest/fibonacci
+-rwxr-xr-x. 1 seolcu seolcu 79  11월 23일  HH:MM guest/hctest
+-rwxr-xr-x. 1 seolcu seolcu 33  11월 23일  HH:MM guest/hello
+-rwxr-xr-x. 1 seolcu seolcu 1   11월 23일  HH:MM guest/minimal
+-rwxr-xr-x. 1 seolcu seolcu 142 11월 23일  HH:MM guest/multiplication
+-rwxr-xr-x. 1 seolcu seolcu 51  11월 23일  HH:MM guest/pmode_test
+-rwxr-xr-x. 1 seolcu seolcu 12K 11월 23일  HH:MM os-1k/kernel
 ```
 
 모든 파일이 존재하면 준비 완료! 아래의 시연 명령어들을 실행하면 됩니다.
@@ -52,7 +52,7 @@ ls -lh kvm-vmm guest/*.bin os-1k/*.bin
 
 #### 1-1. Minimal Guest (가장 단순한 1바이트 게스트)
 ```bash
-./kvm-vmm guest/minimal.bin
+./kvm-vmm guest/minimal
 ```
 **설명**: 단 1바이트(HLT 명령어)로 구성된 가장 단순한 게스트. VMM이 정상 동작하는지 확인.
 
@@ -70,7 +70,7 @@ ls -lh kvm-vmm guest/*.bin os-1k/*.bin
 
 #### 1-2. Hello Guest (문자열 출력)
 ```bash
-./kvm-vmm guest/hello.bin
+./kvm-vmm guest/hello
 ```
 **설명**: "Hello, KVM!" 메시지를 하이퍼콜로 출력하는 게스트.
 
@@ -88,7 +88,7 @@ Hello, KVM!
 
 #### 1-3. Counter Guest (숫자 출력)
 ```bash
-./kvm-vmm guest/counter.bin
+./kvm-vmm guest/counter
 ```
 **설명**: 0부터 9까지 순차적으로 출력하는 게스트.
 
@@ -107,7 +107,7 @@ Hello, KVM!
 
 #### 2개 게스트 동시 실행
 ```bash
-./kvm-vmm guest/multiplication.bin guest/counter.bin
+./kvm-vmm guest/multiplication guest/counter
 ```
 
 **설명**:
@@ -132,7 +132,7 @@ Hello, KVM!
 
 #### 4개 게스트 동시 실행 (최대 확장성)
 ```bash
-./kvm-vmm guest/counter.bin guest/hello.bin guest/multiplication.bin guest/minimal.bin
+./kvm-vmm guest/counter guest/hello guest/multiplication guest/minimal
 ```
 
 **설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행
@@ -154,7 +154,7 @@ Hello, KVM!
 
 #### 3-1. 구구단 출력
 ```bash
-printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **설명**: 
@@ -190,7 +190,7 @@ Select:
 
 #### 3-2. 카운터
 ```bash
-printf '2\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '2\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **예상 결과**:
@@ -203,7 +203,7 @@ printf '2\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 
 #### 3-3. 대화형 에코 (대화형 테스트 권장)
 ```bash
-./kvm-vmm --paging os-1k/kernel.bin
+./kvm-vmm --paging os-1k/kernel
 # 메뉴에서 3 선택 → 메시지 입력 → "quit" 입력 → 0으로 종료
 ```
 
@@ -227,7 +227,7 @@ Exiting echo program
 
 #### 3-4. Fibonacci 수열
 ```bash
-printf '4\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '4\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **예상 결과**:
@@ -254,7 +254,7 @@ F(14) = 377
 
 #### 3-5. 소수 찾기
 ```bash
-printf '5\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '5\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **예상 결과**:
@@ -270,7 +270,7 @@ Total: 25 primes
 
 #### 3-6. 계산기 (입력 파싱 이슈 있음)
 ```bash
-printf '6\n42 + 58\nq\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '6\n42 + 58\nq\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **설명**:
@@ -283,7 +283,7 @@ printf '6\n42 + 58\nq\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 
 #### 3-7. Factorial (0! ~ 12!)
 ```bash
-printf '7\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '7\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **설명**:
@@ -316,7 +316,7 @@ Note: 13! = 6227020800 (overflow on 32-bit)
 
 #### 3-8. GCD (최대공약수)
 ```bash
-printf '8\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '8\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **설명**:
@@ -339,7 +339,7 @@ GCD(1071, 462) = 21
 
 #### 3-9. About 1K OS
 ```bash
-printf '9\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
+printf '9\n0\n' | ./kvm-vmm --paging os-1k/kernel
 ```
 
 **예상 결과**:
@@ -364,13 +364,13 @@ Educational hypervisor using KVM API
 ### 1. Verbose 모드 (디버깅용)
 VM exit, I/O, 하이퍼콜 상세 로그 출력:
 ```bash
-./kvm-vmm --verbose guest/hello.bin
+./kvm-vmm --verbose guest/hello
 ```
 
 ### 2. 타임아웃 설정
 무한 대기 방지:
 ```bash
-timeout 5s ./kvm-vmm --paging os-1k/kernel.bin
+timeout 5s ./kvm-vmm --paging os-1k/kernel
 ```
 
 ### 3. 깔끔한 화면
@@ -395,7 +395,7 @@ echo $TERM  # xterm-256color 등이 나와야 함
 두 개의 완전히 독립적인 프로그램이 동시에 실행됩니다.
 
 [명령어 입력]
-./kvm-vmm guest/multiplication.bin guest/counter.bin
+./kvm-vmm guest/multiplication guest/counter
 
 보시다시피 두 프로그램의 출력이 색상으로 구분되어 섞여 나오는데,
 이것은 진짜 병렬 실행이 일어나고 있다는 증거입니다.
@@ -420,7 +420,7 @@ IOPL=3을 설정해서 user space에서 I/O 명령어를
 실행할 수 있게 했습니다.
 
 [명령어 입력]
-./kvm-vmm --paging os-1k/kernel.bin
+./kvm-vmm --paging os-1k/kernel
 (메뉴에서 3 입력)
 
 이제 입력이 정상적으로 에코되는 것을 볼 수 있습니다."
@@ -448,13 +448,13 @@ sudo usermod -aG kvm $USER
 make clean all
 
 # 실행
-./kvm-vmm guest/hello.bin
+./kvm-vmm guest/hello
 ```
 
 ### 문제: 1K OS 입력 안 받음
-- 대화형 입력이 필요한 경우: `./kvm-vmm --paging os-1k/kernel.bin`
-- 자동화된 입력: `printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin`
-- 충분한 타임아웃 설정: `timeout 10s ./kvm-vmm --paging os-1k/kernel.bin`
+- 대화형 입력이 필요한 경우: `./kvm-vmm --paging os-1k/kernel`
+- 자동화된 입력: `printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel`
+- 충분한 타임아웃 설정: `timeout 10s ./kvm-vmm --paging os-1k/kernel`
 
 ### 문제: Real Mode 게스트가 멈춤
 - **해결됨!** 이전에는 IRQCHIP 때문에 멈췄지만, 현재는 Real Mode에서 IRQCHIP을 생성하지 않아 즉시 종료됨
