--- a/docs/벤치마크_결과.md
+++ b/docs/벤치마크_결과.md
@@ -16,12 +16,12 @@
 
 | 프로그램 | Binary 크기 | VM Exits | 실행 시간 | 특징 |
 |---------|------------|----------|----------|------|
-| minimal.bin | 1 byte | 1 | 0.01s | 단순 HLT |
-| hello.bin | 33 bytes | 13 | 0.01s | 문자열 출력 (12자) |
-| counter.bin | 18 bytes | 11 | 0.01s | 숫자 출력 (0-9) |
-| multiplication.bin | 142 bytes | 491 | 0.01s | 구구단 (2-9단) |
-| fibonacci.bin | 82 bytes | ~50 | 0.01s | Fibonacci (15개) |
-| matrix.bin | 8.3 KB | 93 | 0.01s | 8x8 행렬 곱셈 |
+| minimal | 1 byte | 1 | 0.01s | 단순 HLT |
+| hello | 33 bytes | 13 | 0.01s | 문자열 출력 (12자) |
+| counter | 18 bytes | 11 | 0.01s | 숫자 출력 (0-9) |
+| multiplication | 142 bytes | 491 | 0.01s | 구구단 (2-9단) |
+| fibonacci | 82 bytes | ~50 | 0.01s | Fibonacci (15개) |
+| matrix | 8.3 KB | 93 | 0.01s | 8x8 행렬 곱셈 |
 
 **주요 발견**:
 - 모든 Real Mode 게스트가 < 10ms 내에 실행 완료
@@ -105,7 +105,7 @@
 ### VMM 메모리 사용
 
 ```bash
-$ /usr/bin/time -v ./kvm-vmm guest/multiplication.bin 2>&1 | grep "Maximum resident"
+$ /usr/bin/time -v ./kvm-vmm guest/multiplication 2>&1 | grep "Maximum resident"
 Maximum resident set size (kbytes): 1480
 ```
 
