--- a/docs/최종보고서.md
+++ b/docs/최종보고서.md
@@ -153,10 +153,10 @@ make run-multi-2
 
 **현재 방식**:
 ```bash
-./kvm-vmm guest/hello.bin
-./kvm-vmm guest/multiplication.bin guest/counter.bin
-./kvm-vmm --paging os-1k/kernel.bin
-./kvm-vmm --verbose --paging os-1k/kernel.bin
+./kvm-vmm guest/hello
+./kvm-vmm guest/multiplication guest/counter
+./kvm-vmm --paging os-1k/kernel
+./kvm-vmm --verbose --paging os-1k/kernel
 ```
 
 **장점**:
