docs: Improve demo guide with progressive multi-vCPU demos
- Remove minimal guest demo (no output, not suitable for presentation)
- Replace with fibonacci guest (better output for demonstration)
- Change multi-vCPU demos to progressive approach:
  - 2-1: Single guest (baseline)
  - 2-2: 2 guests (hello + counter)
  - 2-3: 3 guests (hello + counter + fibonacci)
  - 2-4: 4 guests (hello + counter + fibonacci + fibonacci)
- Add color legend explanation at multi-vCPU section start
- Balance output amount across demos for better visual presentation

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -50,25 +50,7 @@ ls -lh kvm-vmm guest/* os-1k/kernel
 
 ### 시연 1: 기본 리얼 모드 게스트
 
-#### 1-1. Minimal Guest (가장 단순한 1바이트 게스트)
-```bash
-./kvm-vmm guest/minimal
-```
-**설명**: 단 1바이트(HLT 명령어)로 구성된 가장 단순한 게스트. VMM이 정상 동작하는지 확인.
-
-**예상 결과**: 
-```
-[minimal] Thread started
-[minimal] Guest halted after 1 exits
-[minimal] Thread exiting (total exits: 1)
-
-=== All vCPUs completed ===
-```
-즉시 종료 (인터럽트 없이 깔끔하게!)
-
----
-
-#### 1-2. Hello Guest (문자열 출력)
+#### 1-1. Hello Guest (문자열 출력)
 ```bash
 ./kvm-vmm guest/hello
 ```
@@ -86,7 +68,7 @@ Hello, KVM!
 
 ---
 
-#### 1-3. Counter Guest (숫자 출력)
+#### 1-2. Counter Guest (숫자 출력)
 ```bash
 ./kvm-vmm guest/counter
 ```
@@ -103,50 +85,114 @@ Hello, KVM!
 
 ---
 
+#### 1-3. Fibonacci Guest (피보나치 수열)
+```bash
+./kvm-vmm guest/fibonacci
+```
+**설명**: 피보나치 수열의 처음 15개 항을 계산하여 출력하는 게스트.
+
+**예상 결과**: 
+```
+[fibonacci] Thread started
+0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 
+[fibonacci] Guest halted after ~50 exits
+[fibonacci] Thread exiting (total exits: ~50)
+
+=== All vCPUs completed ===
+```
+
+---
+
 ### 시연 2: 다중 vCPU (핵심 기능!)
 
-#### 2개 게스트 동시 실행
+**색상 범례** (시작 시 자동 출력):
+- vCPU 0: 청록색
+- vCPU 1: 초록색
+- vCPU 2: 노란색
+- vCPU 3: 파란색
+
+#### 2-1. 단일 게스트 (기준점)
 ```bash
-./kvm-vmm guest/multiplication guest/counter
+./kvm-vmm guest/hello
+```
+
+**설명**: 먼저 단일 vCPU로 실행하여 기준점 확인
+
+**예상 결과**: 
+```
+[hello] Thread started
+Hello, KVM!
+[hello] Guest halted after 13 exits
+```
+
+---
+
+#### 2-2. 2개 게스트 추가 (병렬 실행 시작!)
+```bash
+./kvm-vmm guest/hello guest/counter
 ```
 
 **설명**:
-- **vCPU 0** (청록): Multiplication guest가 구구단 출력 (hypercall 사용)
-- **vCPU 1** (초록): Counter guest가 "0123456789" 출력
-- **핵심**: 두 출력이 **색상으로 구분**되며 인터리브됨 → 진짜 병렬 실행!
+- **vCPU 0** (청록): Hello 출력
+- **vCPU 1** (초록): Counter (0-9) 출력
+- **핵심**: 두 출력이 **색상으로 구분**되며 문자 단위로 섞임 → 진짜 병렬 실행!
 
 **예상 결과** (터미널에서 색상으로 구분):
 ```
-0[청록]2[초록]1[청록]x[초록]2[청록]1[초록]3...
+[Color Legend]
+  vCPU 0: Cyan, vCPU 1: Green
+
+H[청록]0[초록]e[청록]1[초록]l[청록]2[초록]l[청록]3[초록]...
 ```
-출력이 문자 단위로 섞이며, 각 vCPU의 출력이 서로 다른 색으로 표시됨
 
 **강조 포인트**:
 - 각 vCPU가 독립적인 256KB 메모리 공간 사용
 - vCPU 0: GPA 0x00000, vCPU 1: GPA 0x40000
 - Real Mode에서 CS 레지스터로 주소 지정 (CS×16 + IP)
-- **색상 코딩**: 청록/초록/노랑/파랑으로 vCPU 구분 (빨강은 오류로 오인될 수 있어 제외)
 - **즉각 출력**: 버퍼링 없이 character-by-character 출력으로 병렬성 극대화
 
 ---
 
-#### 4개 게스트 동시 실행 (최대 확장성)
+#### 2-3. 3개 게스트로 확장
 ```bash
-./kvm-vmm guest/counter guest/hello guest/multiplication guest/minimal
+./kvm-vmm guest/hello guest/counter guest/fibonacci
 ```
 
-**설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행
-- vCPU 0 (청록): Counter (0-9)
-- vCPU 1 (초록): Hello
-- vCPU 2 (노랑): Multiplication
-- vCPU 3 (파랑): Minimal (즉시 종료)
+**설명**: 3개 vCPU가 각각 다른 프로그램을 동시에 실행
+- vCPU 0 (청록): Hello
+- vCPU 1 (초록): Counter (0-9)
+- vCPU 2 (노랑): Fibonacci (피보나치 수열)
 
 **예상 결과**: 
 ```
-0[노랑]2[초록]H[청록]1[노랑]x[초록]e[청록]2...
-[파랑][vCPU 3:minimal] Guest halted after 1 exits
+[Color Legend]
+  vCPU 0: Cyan, vCPU 1: Green, vCPU 2: Yellow
+
+H[청록]0[초록]0[노랑]e[청록]1[초록] [노랑]1[노랑]l[청록]2[초록]...
 ```
-4가지 색상으로 구분된 출력이 실시간으로 섞임!
+3가지 색상으로 구분된 출력이 실시간으로 섞임!
+
+---
+
+#### 2-4. 4개 게스트 동시 실행 (최대 확장성)
+```bash
+./kvm-vmm guest/hello guest/counter guest/fibonacci guest/fibonacci
+```
+
+**설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행 (최대 병렬성!)
+- vCPU 0 (청록): Hello
+- vCPU 1 (초록): Counter
+- vCPU 2 (노랑): Fibonacci
+- vCPU 3 (파랑): Fibonacci (두 번째)
+
+**예상 결과**: 
+```
+[Color Legend]
+  vCPU 0: Cyan, vCPU 1: Green, vCPU 2: Yellow, vCPU 3: Blue
+
+H[청록]0[초록]0[노랑]0[파랑]e[청록]1[초록] [노랑]1[파랑]...
+```
+4가지 색상으로 구분된 출력이 실시간으로 섞임 - 최대 병렬성 시연!
 
 ---
 
