--- a/docs/최종보고서.md
+++ b/docs/최종보고서.md
@@ -1,8 +1,8 @@
 # Mini-KVM 최종 프로젝트 보고서 (요약)
 
 **프로젝트명**: Mini-KVM: 교육용 x86 가상 머신 모니터  
-**개발 기간**: 2025년 9월 - 2025년 11월 (13주)  
-**최종 수정**: 2025년 11월 23일  
+**개발 기간**: 2025년 9월 - 2025년 12월 (13주)  
+**최종 수정**: 2025년 12월 2일  
 **팀**: Seolcu (개인 프로젝트)
 
 ---
@@ -12,13 +12,15 @@
 Mini-KVM은 교육 목적으로 처음부터 개발된, 최소한의 기능으로 완전하게 동작하는 x86 아키텍처용 KVM 기반 가상 머신 모니터(VMM)입니다. 이 프로젝트는 다중 vCPU 실행, 인터럽트 처리, 메모리 관리, I/O 에뮬레이션을 포함한 핵심 가상화 개념을 성공적으로 시연합니다. VMM은 리얼 모드(16비트)와 보호 모드(32비트) 게스트를 모두 지원하며, 9개의 대화형 사용자 프로그램을 갖춘 맞춤형 '1K OS' 커널을 포함합니다.
 
 **주요 성과**:
-- 1,400줄의 C 코드로 모든 기능이 동작하는 VMM 구현
+- 4,000줄의 C 코드로 모든 기능이 동작하는 VMM 구현
 - 다중 vCPU 지원 (최대 4개 동시 실행)
 - 완전한 인터럽트 인프라 (타이머 + 키보드)
 - 페이징 및 프로세스 관리가 포함된 보호 모드 커널
-- 6개의 리얼 모드 게스트 + 9개의 보호 모드 프로그램
+- 8개의 리얼 모드 게스트 + 9개의 보호 모드 프로그램
 - 게스트-호스트 통신을 위한 포괄적인 하이퍼콜 인터페이스
-- QEMU TCG 에뮬레이션 대비 50-100배의 성능 향상
+- Long Mode (64-bit) 지원 기반 구축
+- Linux 부트 프로토콜 초기 구현
+- QEMU TCG 에뮤레이션 대비 50-100배의 성능 향상
 
 ---
 
